--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -216,7 +216,7 @@ U
      <widget class="QLineEdit" name="lineEdit"/>
     </item>
     <item row="3" column="0">
-     <widget class="QPushButton" name="pushButton_15">
+     <widget class="QPushButton" name="send_String">
       <property name="text">
        <string>Отправить</string>
       </property>
